--- a/package.json
+++ b/package.json
@@ -3,13 +3,10 @@
   "version": "1.0.0",
   "babel": {
     "presets": [
-      "es2015",
-      "es2016",
-      "es2017",
-      "react"
+      "es2015"
     ]
   },
-  "description": "",
+  "description": "Find guides to each coding lecture.",
   "main": "index.js",
   "scripts": {
     "build": "webpack",
@@ -19,17 +16,25 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-polyfill": "^6.22.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^6.4.1",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2016": "^6.22.0",
     "babel-preset-es2017": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "react": "^15.4.2",
     "react-bootstrap": "^0.30.7",
     "react-dom": "^15.4.2",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
-  }
+    "webpack": "^1.15.0",
+    "webpack-dev-server": "^1.16.5"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/andthomas/ES6Prac.git"
+  },
+  "bugs": {
+    "url": "https://github.com/andthomas/ES6Prac/issues"
+  },
+  "homepage": "https://github.com/andthomas/ES6Prac#readme"
 }
